# jnumpy

./: .gitignore  LICENSE  Manifest.toml  Project.toml  PyC_EncryptPrimes.jl  PyC_MyCMod.jl  PyC_fast_kmeans.jl  README.md  ROADMAP.md  bench0714.jl  build.sh  fast_kmeans.py  pyproject.toml  test.jl  test.py  upload.sh
.github/workflows/: test-nightly.yml  test.yml
TyPython/: Project.toml  README.md  run_devonly.jl
TyPython/src/: CPython.APIs.jl  CPython.Boot.jl  CPython.Defs.jl  CPython.Dev.DevOnly.compiled.jl  CPython.Dev.DevOnly.jl  CPython.Dev.jl  CPython.Julia.jl  CPython.JuliaBase.jl  CPython.JuliaRaw.jl  CPython.MRO.jl  CPython.NumPy.DevOnly.compiled.jl  CPython.NumPy.DevOnly.jl  CPython.NumPy.jl  CPython.ORM.jl  CPython.RawValue.jl  CPython.Wrap.jl  CPython.jl  DevOnly.jl  InitTools.jl  Reflection.DevOnly.compiled.jl  Reflection.DevOnly.jl  Reflection.jl  TyPython.jl  Utils.DevOnly.compiled.jl  Utils.DevOnly.jl  Utils.jl
TyPython/test/: convert.jl  jlwrap.jl  pyexport.jl  runtests.jl
demo/: README.md  run_examples.py
demo/basic/: Project.toml  __init__.py  __init__.pyi
demo/fft/: Project.toml  __init__.py  __init__.pyi
demo/kmeans/: Project.toml  __init__.py  __init__.pyi
example/: run_example.py
example/example/: __init__.py  (+1 more)
expriements/: Manifest.toml  Project.toml
jnumpy/: InitTools.jl  __init__.py  apis.py  defaults.py  envars.py  init.py  utils.py
src/: C.jl  CPython.APIs.jl  CPython.Boot.jl  CPython.Defs.jl  CPython.Dev.jl  CPython.Julia.jl  CPython.MRO.jl  CPython.NumPy.jl  CPython.jl  RawPython.jl  TyPython.jl  Utils.jl
(+19 files in other folders)
