[tool.poetry]
name = "julia-numpy"
version = "0.4.1"
description = "Writing Python C extensions in Julia within 5 minutes."
authors = ["thautwarm <twshere@outlook.com>"]
maintainers = ["songjhaha <songjh96@foxmail.com>"]
homepage = "https://github.com/Suzhou-Tongyuan/jnumpy"
packages = [{include = "jnumpy"}]
include = ["jnumpy/TyPython/Project.toml", "jnumpy/TyPython/src/*.jl"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18"
tomli = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
